My Makefile.inc.

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -4,12 +4,14 @@
 # in a Makefile.local file.
 #
 
-INSTALL_DIR = ###CHANGE ME###
+INSTALL_DIR = /data/rveroy/share/elephant-tracks
 
-ASMJAR = ###CHANGE ME### current version that we're using is asm-all-3.3.jar
+ASMJAR = /data/rveroy/src/JAR/asm-all-3.3.jar
 
-JAVA_PATH = ### Use your java directory. Looks like this: /usr/lib/jvm/java-6-openjdk
-# Has to be Java 1.6. I haven't tested 1.7+
+# JAVA_PATH = /data/rveroy/src/jdk1.8.0_66
+JAVA_PATH = /usr/lib/jvm/java-1.6.0
+
+TBB_PATH = /data/rveroy/src/tbb44_20160526oss
 
 #
 # The lines below give variables that may be customized if needed/desired
@@ -17,7 +19,8 @@ JAVA_PATH = ### Use your java directory. Looks like this: /usr/lib/jvm/java-6-op
 
 JAVAOPTS = -cp .:$(ASMJAR)
 
-INCLUDES = -I$(JAVA_PATH)/include -I$(JAVA_PATH)/include/linux -I./java_crw_demo -I./agent_util -I./GraphAlgorithms -I./RootEnumerator
+INCLUDES = -I$(JAVA_PATH)/include -I$(JAVA_PATH)/include/linux -I./java_crw_demo -I./agent_util -I./GraphAlgorithms -I./RootEnumerator \
+	-I$(TBB_PATH)/include
 
 CXXFLAGS = $(INCLUDES) -O2 -fPIC   -L./GraphAlgorithms -L./RootEnumerator -I./GraphAlgorithms -I./gzstream -W -Wall -Werror
 CFLAGS = $(INCLUDES) -O2 -fPIC 
