Specify atomic as tbb::atomic because of std::atomic.  Some reformatting. Setting the LIBRARY_PATH to use the TBB_PATH if defined.

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -11,7 +11,12 @@ ASMJAR = /data/rveroy/src/JAR/asm-all-3.3.jar
 
 # So far compiles with the following versions of Java
 # JAVA_PATH = /usr/lib/jvm/java-1.6.0-openjdk-1.6.0.39.x86_64
-JAVA_PATH = /usr/lib/jvm/java-1.7.0-oracle.x86_64
+#
+# JAVA_PATH for Tufts black-hole and white-hole
+# JAVA_PATH = /usr/lib/jvm/java-1.7.0-oracle.x86_64
+#
+# JAVA_PATH for Tufts red-giant
+JAVA_PATH = /usr/lib/jvm/java-1.7.0-openjdk-1.7.0.111-2.6.7.2.el7_2.x86_64
 
 # Uncomment and customize if you need a non-standard location for TBB
 TBB_PATH = /data/rveroy/src/tbb44_20160526oss
@@ -23,14 +28,15 @@ JAVAC = $(JAVA_PATH)/bin/javac
 JAVAOPTS = -cp .:$(ASMJAR)
 
 # Use this if using system installation of TBB
-# INCLUDES = -I$(JAVA_PATH)/include -I$(JAVA_PATH)/include/linux -I./java_crw_demo -I./agent_util -I./GraphAlgorithms -I./RootEnumerator \
+# INCLUDES = -I$(JAVA_PATH)/include -I$(JAVA_PATH)/include/linux -I./java_crw_demo -I./agent_util -I./GraphAlgorithms -I./RootEnumerator
 
 # Use this if you need to specify a custom location for TBB
-INCLUDES = -I$(JAVA_PATH)/include -I$(JAVA_PATH)/include/linux -I./java_crw_demo -I./agent_util -I./GraphAlgorithms -I./RootEnumerator \
-    -I$(TBB_PATH)/include -Wl,-L$(TBB_LIBPATH)
+INCLUDES = -I$(TBB_PATH)/include -I$(JAVA_PATH)/include -I$(JAVA_PATH)/include/linux -I./java_crw_demo -I./agent_util \
+#     -I./GraphAlgorithms -I./RootEnumerator
 
+# CXXFLAGS = $(INCLUDES) -O2 -fPIC   -L./GraphAlgorithms -L./RootEnumerator -I./GraphAlgorithms -I./gzstream -W -Wall -Werror -std=c++11
 CXXFLAGS = $(INCLUDES) -O2 -fPIC   -L./GraphAlgorithms -L./RootEnumerator -I./GraphAlgorithms -I./gzstream -W -Wall -Werror -std=c++11
-CFLAGS = $(INCLUDES) -O2 -fPIC 
+CFLAGS = $(INCLUDES) -O2 -fPIC
 
 javaclasses = ElephantTracks.class 'ElephantTracks$$1.class'
 
